[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp_text_messaging"
version = "0.1"
description = "Your project description here"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "nltk",
    "bertopic",
    "openai"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["src"]  # Adjust if your code isn't under /src
